Parámetros de configuración del nombre de la base de datos y ya funciona la práctica con MongoDB.